--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
                 <h2 class="text-white mb-4">{% block about_title %}Expert AWS Cloud Professional Services{% endblock about_title %}</h2>
                 <p class="text-white-50">
                     {% block about_description %}
-			Founded by an engineer that has been building full-time in AWS since 2014, Cloudcast offers services for secure cloud architecture design+implementation, on-prem application migration, and cloud optimization. 
+			Founded in 2024 by an engineer that has been building full-time in AWS since 2014, Cloudcast offers services for secure cloud architecture design+implementation, on-prem application migration, and cloud optimization. 
                     {% endblock about_description %}
                 </p>
             </div>
