--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,45 @@
 {% extends "zola-grayscale/templates/index.html" %}
+{% block navigation %}
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="{{ get_url(path="/") }}#page-top">
+            <img src="{{ get_url(path='img/cloudcast-1-black.png') }}" alt="Cloudcast Logo" style="height: 30px; margin-right: 10px;">
+            {% block nav_home_title %}{{ config.title }}{% endblock nav_home_title %}
+        </a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto">
+                {% for item in navigation.item %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ item.path | safe }}">{{ item.name }}</a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</nav>
+{% endblock navigation %}
+
+<!-- Test masthead to get logo displayed above title -->
+{% block masthead %}
+<header class="masthead">
+    <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
+        <div class="d-flex justify-content-center">
+            <div class="text-center">
+                <img src="{{ get_url(path='img/cloudcast-1-black.png') }}" alt="Cloudcast Logo" style="height: 60px; margin-bottom: 20px;">
+                <h1 class="mx-auto my-0 text-uppercase">{{ config.title }}</h1>
+                <h2 class="text-white-50 mx-auto mt-2 mb-5">{{ config.description }}</h2>
+                <a class="btn btn-primary" href="#about">Get Started</a>
+            </div>
+        </div>
+    </div>
+</header>
+{% endblock masthead %}
+
 {% block about %}
 <!-- About -->
 <section class="about-section text-center" id="{% block about_id %}about{% endblock about_id %}">
@@ -8,7 +49,7 @@
                 <h2 class="text-white mb-4">{% block about_title %}Expert AWS Cloud Professional Services{% endblock about_title %}</h2>
                 <p class="text-white-50">
                     {% block about_description %}
-			Founded in 2024 by an engineer that has been building full-time in AWS since 2014, Cloudcast offers services for secure cloud architecture design+implementation, on-prem application migration, and cloud optimization. 
+                    Founded in 2024 by Ryan Cast, an engineer that has been building full-time in AWS since 2014, Cloudcast offers services for secure cloud architecture design+implementation, on-prem application migration, and cloud optimization.
                     {% endblock about_description %}
                 </p>
             </div>
@@ -123,29 +164,33 @@
 <!-- Contact -->
 <section class="contact-section bg-black" id="{% block contact_id %}contact{% endblock contact_id %}">
     <div class="container px-4 px-lg-5">
-        {% block contact_contact %}
+    {% block contact_contact %}
         <div class="row gx-4 gx-lg-5">
-        {% for item in contact.contact %}
-        <div class="col-md-4 mb-3 mb-md-0">
-            <div class="card py-4 h-100">
-                <div class="card-body text-center">
-                    <i class="fas {{ item.icon }} text-primary mb-2"></i>
-                    <h4 class="text-uppercase m-0">{{ item.name }}</h4>
-                    <hr class="my-4 mx-auto" />
-                    <div class="small text-black-50">{{ item.address|safe }}</div>
+            {% for item in contact.contact %}
+            <div class="col-md-4 mb-3 mb-md-0">
+                <div class="card py-4 h-100">
+                    <div class="card-body text-center">
+                        <i class="fas {{ item.icon }} text-primary mb-2"></i>
+                        <h4 class="text-uppercase m-0">{{ item.name }}</h4>
+                        <hr class="my-4 mx-auto" />
+                        <div class="small text-black-50">
+                            {% if item.address %}
+                                {{ item.address|safe }}
+                            {% elif item.content %}
+                                {% if item.name == "PGP" %}
+                                    <a href="{{ get_url(path='cloudcast-pgp-key.asc') }}" download>Download PGP Key</a>
+                                {% else %}
+                                    {{ item.content|safe }}
+                                {% endif %}
+                            {% endif %}
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        {% endfor %}
-        </div>
-        {% endblock contact_contact %}
-        {% block contact_social %}
-        <div class="social d-flex justify-content-center">
-            {% for item in contact.social %}
-            <a class="mx-2" href="{{ item.url | safe }}"><i class="fab {{ item.icon }}" aria-hidden="true"></i></a>
             {% endfor %}
-        </div>
-        {% endblock contact_social %}
+</div>
+{% endblock contact_contact %}
+
     </div>
 </section>
 {% endblock contact %}
