update icons and about

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                 <h2 class="text-white mb-4">{% block about_title %}Expert AWS Cloud Professional Services{% endblock about_title %}</h2>
                 <p class="text-white-50">
                     {% block about_description %}
-                    Founded in 2024 by Ryan Cast, an engineer that has been building full-time in AWS since 2014, Cloudcast offers services for secure cloud architecture design+implementation, on-prem application migration, and cloud optimization.
+                    Founded in 2024 by Ryan Cast, an engineer that has been building full-time in AWS since 2014, Cloudcast can help with your secure cloud architecture design+implementation, on-prem application migration, and cloud optimization. Work with Cloudcast from your AWS console on AWS IQ. Or reach out via email!
                     {% endblock about_description %}
                 </p>
             </div>
